--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://josue270193.github.io/angular_course/"
+          }
         }
       }
     }
