--- a/.github/workflows/publish_github_page.yml
+++ b/.github/workflows/publish_github_page.yml
@@ -10,12 +10,12 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧 
+      - name: Install 🔧 
         run: |
           npm ci
-          npm run build
+          npm run install
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: dist/my_first_app
+        run: |
+          npm ci 
+          npm run ng -- deploy
