--- a/.github/workflows/publish_github_page.yml
+++ b/.github/workflows/publish_github_page.yml
@@ -16,6 +16,9 @@ jobs:
           npm install
 
       - name: Deploy 🚀
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm ci 
-          npm run ng -- deploy
+          npm run ng -- deploy --no-silent
+
