--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,37 @@
 {
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "ng serve",
+  "configurations": [        
+    {      
+      "name": "ng serve Chrome",
       "type": "chrome",
-      "request": "launch",
+      "request": "launch",      
+      "url": "http://localhost:4200",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      // "webRoot": "${workspaceFolder}"  
     },
     {
-      "name": "ng test",
-      "type": "chrome",
+      "name": "ng serve Firefox",
+      "type": "firefox",
       "request": "launch",
+      "reAttach": true,
+      // "preLaunchTask": "npm: start",
+      "url": "http://localhost:4200/",
+      "webRoot": "${workspaceFolder}"      
+    },
+    {
+      "name": "ng serve attach Firefox",
+      "type": "firefox",
+      "request": "attach",
+      // "preLaunchTask": "npm: start",
+      "url": "http://localhost:4200/",
+      "webRoot": "${workspaceFolder}"      
+    },
+    {
+      "name": "ng test firefox",
+      "type": "firefox",
+      "request": "launch",
+      "reAttach": true,
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
     }
